<resources>
    <string name="app_name">StockPortfolio</string>

    <string name="action_settings">Settings</string>

    <string name="enter_stock">Enter Stock</string>
    <string name="add">Add Stock</string>
    <string name="remove">Remove</string>
    <string name="get_details">Details</string>
    <string name="my_stocks">My Stocks</string>

    <string name="new_menu">Search</string>
    <string name="delete_menu">Delete</string>

    <string name="current">Current</string>
    <string name="opening">Opening</string>
    <string name="change">Change</string>
    <string name="volume">Volume</string>

    <string name="toast_invalid_stock">Entered stock is invalid.</string>
    <string name="toast_already_exists">Entered stock already added.</string>

    <string name="stock_list_key">Stock List Key</string>
    <string name="stock_details_key">stock.details.key</string>
    <string name="stock_details_bool_key">stock.details.bool.key</string>
    <string name="shared_preferences_key">Pintimalli.Kevin.StockPortfolio</string>
    <string name="service_stock_added_key">StockRetrievalService.stock.added</string>
    <string name="service_stock_init_key">StockRetrievalService.stock.init</string>
    <string name="service_stock_update_key">StockRetrievalService.stock.update</string>
    <string name="stock_model_key">StockRetrievalService.stock.broadcast</string>
    <string name="news_key">stock.news.fragment</string>

    <string name="oneday">1D</string>
    <string name="fivedays">5D</string>
    <string name="onemonth">1M</string>
    <string name="sixmonths">6M</string>
    <string name="oneyear">1Y</string>

</resources>
