<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="edu.temple.stockportfolio.Fragments.StockDetailsFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stocknametext"
        android:text="Default"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/details_header_size"/>

    <ImageView
        android:layout_width="@dimen/image_size_width"
        android:layout_height="@dimen/image_size_height"
        android:id="@+id/stockchart"
        android:layout_gravity="center_horizontal" />

    <info.hoang8f.android.segmented.SegmentedGroup
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/chartdategroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="10dp"
        android:checkedButton="@+id/onedaybutton">

        <RadioButton
            android:id="@+id/onedaybutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oneday"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/fivedaybutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fivedays"
            style="@style/RadioButton" />
        <RadioButton
            android:id="@+id/onemonthbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/onemonth"
            style="@style/RadioButton" />
        <RadioButton
            android:id="@+id/sixmonthbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sixmonths"
            style="@style/RadioButton" />
        <RadioButton
            android:id="@+id/oneyearbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oneyear"
            style="@style/RadioButton" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/details_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/currentpricetext"
            android:text="Default"
            android:textSize="@dimen/details_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/percentchangetext"
            android:text="Default"
            android:textSize="@dimen/details_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/openingpricetext"
            android:text="Default"
            android:textSize="@dimen/details_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/volumetext"
            android:text="Default"
            android:textSize="@dimen/details_text_size"/>

    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
